@@ -409,6 +409,11 @@ bufferevent_settimeout(struct bufferevent *bufev,
     int timeout_read, int timeout_write) {
 	bufev->timeout_read = timeout_read;
 	bufev->timeout_write = timeout_write;
+
+	if (event_pending(&bufev->ev_read, EV_READ, NULL))
+		bufferevent_add(&bufev->ev_read, timeout_read);
+	if (event_pending(&bufev->ev_write, EV_WRITE, NULL))
+		bufferevent_add(&bufev->ev_write, timeout_write);
 }
 
 /*
